--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,14 +1,17 @@
-<%- include('partials/header') %>
+<% layout('layouts/boilerplate')%>
+ 
 <h1>Home</h1>
+
+
 
 <p><%= content %></p>
 
 <% for(let post of postsar){ %>
     <% var l= "/posts/"+post.title; %>
     <h1><%= post.title %></h1>
-    <span class="readmore"><p class="truncated"><%= post.description%> ... </p><a href="/posts/<%= post._id %>" >Read more</a></span>
+    <span class="readmore"><p class="truncated"><%= post.description%> ... </p><a class="read" href="/posts/<%= post._id %>" >Read more</a></span>
     
 <% }; %>
 
+<h2 class="h2todo"><a class="a2-todo" href="/todo">YOUR TO-DO LIST</a></h2>
 
-<%- include('partials/footer') %>
