--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,7 @@
-<%- include('partials/header') %>
+<% layout('layouts/boilerplate')%>
+
 <h1>ABOUT US</h1>
 
 <p>
     <%= content %>
 </p>
-
-<%- include('partials/footer') %>
