--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,4 +1,5 @@
-<%- include('partials/header') %>
+<% layout('layouts/boilerplate')%>
+
 <h1>COMPOSE</h1>
 <form action="/compose" method="POST">
     <div class="mb-3">
@@ -13,4 +14,3 @@
   </form>
 
 
-<%- include('partials/footer') %>
