--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,8 +1,8 @@
-<%- include('partials/header') %>
+<% layout('layouts/boilerplate')%>
+
 <h1>CONTACT</h1>
 
 <p>
     <%= content %>
 </p>
 
-<%- include('partials/footer') %>
