--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,8 +1,6 @@
-<%- include('partials/header') %>
+<% layout('layouts/boilerplate')%>
+
 
 
     <h1><%= giventitle %></h1>
     <p><%= givendescription%></p>
-
-
-<%- include('partials/footer') %>
