--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My first Blog app</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    
+        <nav class="navbar navbar-expand-lg navbar">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">BLOGGED</a>
+            <a class="navbar-brand" href="#"><i class="fa-brands fa-microblog"></i>BLOGGED</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li class="nav-item"> 
                   <a class="nav-link" href="/">HOME</a>
                 </li>
                 <li class="nav-item">
@@ -40,5 +27,3 @@
           </div>
         </nav>
     </head>
-    <body>
-        <div class='container'>
