--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,6 +98,7 @@ label {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+    
 }
 
 
@@ -167,6 +168,7 @@ li:hover span {
 	margin: 100px auto;
 	background: #f7f7f7;
 	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
+    width: fit-content;
 }
 
 .completed {
@@ -237,4 +239,18 @@ a.nav-link:hover{
     font-family: "Font Awesome 6 Brands";
     font-weight: 400;
     padding-right: 6px;
+}
+
+@media screen  and (max-width: 360px){
+    .a2-todo{
+        text-decoration: none;
+        background-color: lightpink;
+        padding: 7px;
+        color: black;
+        font-size: smaller;
+    }
+
+    .h2todo{
+        left: 23%;
+    }
 }
