--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -13,5 +13,10 @@
     
 <% }; %>
 
-<h2 class="h2todo"><a class="a2-todo" href="/todo">YOUR TO-DO LIST</a></h2>
+
+<!-- <h2 class="h2todo">
+    <a class="a2-todo" href="/todo">YOUR TO-DO LIST</a>
+    <br>
+    <a class="a2-todo" href="https://glacial-tor-74309.herokuapp.com/">GAMEZONE</a>
+</h2> -->
 
