--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,12 @@
                   <a class="nav-link" href="/about">ABOUT US</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="/todo">TODO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://glacial-tor-74309.herokuapp.com/">GAME</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/contact">CONTACT US</a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#">Action</a></li>
